@@ -1,4 +1,9 @@
 2016-06-07  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* common-src/conffile.c: Allow $t in changerfile and tpchanger from a
+	  changer section
+	* man/xml-source/amanda.conf.5.xml: Document it
+
+2016-06-07  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* perl/Amanda/Changer.pm: Allow $r and $t in autolabel and
 	  meta-autolabel
 	* man/xml-source/amanda.conf.5.xml: Document it
